--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "pino",
     "tcp"
   ],
+  "dependencies": {
+    "pino-multi-stream": "^3.1.1"
+  },
   "author": "Cooper",
   "license": "MIT",
   "bugs": {
